...
    android:orientation="horizontal"
    android:background="@drawable/button">

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/subscriptions_subscriptions_list_view_item_channelImageButton" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:weightSum="1">
...
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <com.podonomy.podonomyplayer.ui.SubscribeCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subscriptions_subscriptions_list_view_item_subscribedCheckbox"
            android:layout_gravity="right"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
