...
    <android.support.v4.widget.Space
        android:layout_row="0"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_textBox"
        android:text="@string/search_type_search_keywords"
        android:lines="1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:singleLine="true"/>
...
/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_search_button_label"
        android:id="@+id/search_search_button"
        android:layout_row="5"
        android:layout_column="2"
        />
    <!-- Buttons row -->


...
