<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/ad_bar"
        layout="@layout/ad_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/player_controls"
        android:layout_below="@+id/indicator"
        />


    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:padding="10dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        ads:radius="8dp"
        ads:fillColor="#FF888888"
        ads:pageColor="#FFFFFF"
        ads:strokeColor="#FF000000"
        ads:strokeWidth="2dp"
        android:layout_below="@+id/ad_bar"
        />

    <include
        android:id="@+id/navbar"
        layout="@layout/navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TableLayout
        android:id="@+id/player_controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navbar"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="1,2,3,4,5">

        <TableRow
            android:id="@+id/player_controls_row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player_playlist_playing_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="7"
                android:text="Playlist playing"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/player_controls_row_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/player_send_invite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?ic_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_episode_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Episode Title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/player_channel_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Channel Name - 13/02/2016"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/player_mark_read_unread_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?ic_checkbox_unchecked" />

        </TableRow>

        <TableRow
            android:id="@+id/player_controls_row_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/player_episode_passed_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="00:55:34"
                android:layout_gravity="center"/>

            <SeekBar
                android:id="@+id/player_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:layout_span="5" />

            <TextView
                android:id="@+id/player_episode_total_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="00:55:34"
                android:layout_gravity="center"/>


        </TableRow>

        <TableRow
            android:id="@+id/player_controls_row_4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <ImageButton
                android:id="@+id/player_skip_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:src="?ic_skip_previous" />

            <ImageButton
                android:id="@+id/player_backward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:src="?ic_fast_rewind" />

            <ImageButton
                android:id="@+id/player_play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:src="?ic_play_arrow" />

            <ImageButton
                android:id="@+id/player_forward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:src="?ic_fast_forward" />

            <ImageButton
                android:id="@+id/player_skip_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:src="?ic_skip_next" />

            <ImageButton
                android:id="@+id/player_expand_controls_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?ic_expand_less" />
        </TableRow>

        <TableRow
            android:id="@+id/player_controls_row_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/player_increase_playspeed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:src="?ic_add" />

            <TextView
                android:id="@+id/player_playspeed_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="1.4 x"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/player_decrease_playspeed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?ic_remove" />

            <ImageButton
                android:id="@+id/player_collapse_controls_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:src="?ic_expand_more" />
        </TableRow>

    </TableLayout>



</RelativeLayout>