...
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:gravity="bottom">


    <ImageButton
        android:id="@+id/navButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:src="?ic_menu"
        android:layout_alignParentLeft="true" />

...
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/navBar_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/actionButton"
        android:layout_alignBottom="@+id/navButton"
        android:layout_alignTop="@+id/navButton"
        android:src="?ic_sort"
        android:visibility="gone"/>


...
